--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^3.7.1",
+    "@plaiceholder/next": "^2.1.0",
+    "@plaiceholder/tailwindcss": "^2.1.0",
     "next": "11.0.1",
+    "plaiceholder": "^2.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0"
