--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@netlify/plugin-nextjs": "^3.7.1",
     "@plaiceholder/next": "^2.1.0",
     "@plaiceholder/tailwindcss": "^2.1.0",
+    "fs": "0.0.1-security",
     "next": "11.0.1",
     "plaiceholder": "^2.0.1",
     "react": "17.0.2",
