--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@plaiceholder/next": "^2.1.0",
     "@plaiceholder/tailwindcss": "^2.1.0",
     "next": "11.0.1",
+    "next-mdx-remote": "^3.0.4",
     "plaiceholder": "^2.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-markdown": "^7.0.1",
+    "remark-gfm": "^2.0.0",
     "sharp": "^0.29.1"
   },
   "devDependencies": {
