--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "export": "next export"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
     "@netlify/plugin-nextjs": "^3.7.1",
+    "@next/mdx": "^11.1.2",
     "@plaiceholder/next": "^2.1.0",
     "@plaiceholder/tailwindcss": "^2.1.0",
     "next": "11.0.1",
@@ -20,7 +22,8 @@
     "react-icons": "^4.2.0",
     "react-markdown": "^7.0.1",
     "remark-gfm": "^2.0.0",
-    "sharp": "^0.29.1"
+    "sharp": "^0.29.1",
+    "showdown": "^1.9.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
