--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
+    "postcss-nesting": "^8.0.1",
     "tailwindcss": "^2.2.4"
   }
 }
